--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,1 +1,1 @@
-    <span class="tag"><%= link_to tag.tag %>,</span>
+    <span class="tag"><%= link_to tag.tag, article_tag_path(article._id) %>,</span>
