--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -52,12 +52,21 @@ h2 a:hover {
 	margin:0;
 }
 
-.option {
-	padding: 0 5px;
-	width: 100px;
-	display: inline-block;
-	float:right;
+.post_options {
 	border-bottom: 2px dashed #ccc;
+	padding: 0 10px;
+}
+
+.comments {
+	width: 49%;
+	display: inline-block;
+	text-align: left;
+}
+
+.option {
+	width: 49%;
+	display: inline-block;
+	text-align: right;
 }
 
 a{
